--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@radix-ui/themes": "^3.1.6",
     "next": "15.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
