--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
+    "@next/font": "^14.2.15",
     "@radix-ui/themes": "^3.1.6",
     "next": "15.1.0",
     "react": "^19.0.0",
