--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swiper": "^11.1.15"
+    "swiper": "^11.1.15",
+    "yet-another-react-lightbox": "^3.21.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
