Fade Animation Added

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/font": "^14.2.15",
     "@radix-ui/themes": "^3.1.6",
     "animejs": "^3.2.2",
+    "aos": "^2.3.4",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/animejs": "^3.1.12",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
