--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-toastify": "^11.0.2",
     "stein-js-client": "^0.0.2",
     "swiper": "^11.1.15",
     "yet-another-react-lightbox": "^3.21.7",
