--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
     "@next/font": "^14.2.15",
+    "@number-flow/react": "^0.5.9",
     "@radix-ui/themes": "^3.1.6",
     "animejs": "^3.2.2",
     "aos": "^2.3.4",
